Fix CSS alignment in fb2.css for index2.css

--- a/fb2.css
+++ b/fb2.css
@@ -284,8 +284,8 @@ input.sign-button:focus
     line-height: 20px;
     text-decoration: none;
     display: inline-block;
-    margin-left: 114px;
-    margin-top: 30px;
+    margin-left: 127px;
+    margin-top: 10px;
 }
 
 .footer
